<resources>
    <string name="app_name">Citas</string>
    <string name="citas">Citas</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="asunto">Asunto</string>
    <string name="todo">TODO</string>
    <string name="titulo">Titulo</string>
    <string name="insertar_cita">Insertar cita</string>
    <string name="salir">Salir</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="introduzca_el_usuario">Introduzca el usuario</string>
    <string name="introduzca_la_contrase_a">Introduzca la contraseña</string>
    <string name="aceptar">Aceptar</string>
</resources>